--- a/css/index.css
+++ b/css/index.css
@@ -16,7 +16,7 @@
 body {
     margin: 0;
     background: #fff;
-    font-family: 'Open Sans';
+    font-family: 'Open Sans', sans-serif;
     font-size: 25px;
     font-weight: 100;
 }
@@ -164,8 +164,7 @@ a.homelink:hover {
     line-height: 21px;
     text-align: left;
 
-    width: 100%;
-
+    width: 90%;
 }
 
 #content > a > div > div > span {
